# synthetic

./: Dockerfile  Makefile  README.md  docker-compose.yaml  env.sh  main.py  prompt_aliases.sh  pyproject.toml  requirements.txt  sqlite_pipeline_manager.py  switch_prompt.sh
prompt/: prompt.txt  prompt_full.txt  prompt_safe.txt
samples/: ecommerce.sql  financial_trading.sql  network_flows.sql  to_kafka.sql
script/: random.sql  udf.sql
static/css/: style.css
static/js/: app.js
templates/: index.html
