[project]
name = "random-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.1",
    "faker>=37.4.0",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "openai>=1.93.0",
    "proton-driver>=0.2.13",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.64",
]
